--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>HOME PAGE</title>
 </head>
 <body>
+    <hr>
+    <header>
+       <h1> <img src="images/logo.png"height ="40">HAPPY PAWS</h1><hr>
+       <hr>
+</header>
     
 </body>
 </html>
